Calculates tax liability. Added gtest for new method.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,20 +3,22 @@ cmake_minimum_required(VERSION 2.8.9)
 include_directories(app taxBrackets)
 
 file(GLOB SOURCES "app/src/*.cpp" "taxBrackets/src/*.cpp")
-#file(GLOB SOURCES "taxBrackets/src/*.cpp")
+
 file(GLOB TESTS "test/*.cpp")
 
 set( CMAKE_CXX_COMPILER "/usr/bin/g++" )
-set(CMAKE_CXX_STANDARD 11)
+set( CMAKE_CXX_STANDARD 11 )
+set (BOOST_ROOT "/usr/local/include/")
 project(taxes)
 
 add_executable(taxes ${SOURCES})
+target_link_libraries(taxes ${Boost_LIBRARIES})
 add_library(taxes_lib ${SOURCES})
 
 ### TESTING ###
 add_subdirectory(gtest)
 enable_testing()
-include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR} taxBrackets)
 
 ### UNIT TESTS ###
 add_executable(unitTests ${TESTS})
