--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ language: cpp
 compiler:
   - g++
 
-packages: libboost-all-dev
+addons: 
+  apt: 
+    packages: libboost-all-dev
 
 before_script:
   - cmake .
